--- a/README.html
+++ b/README.html
@@ -49,32 +49,32 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<figure id="org1cd626e">
+<figure id="orgf6e6c0b">
 <a href="https://github.com/dmacvicar/site.org/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><img src="https://github.com/dmacvicar/site.org/workflows/Build%20and%20publish%20to%20pages/badge.svg" alt="badge.svg" class="org-svg"></a>
 
 </figure>
 
-<section id="outline-container-org6093087" class="outline-2">
-<h2 id="org6093087">Introduction</h2>
-<div class="outline-text-2" id="text-org6093087">
+<section id="outline-container-org298a2b3" class="outline-2">
+<h2 id="org298a2b3">Introduction</h2>
+<div class="outline-text-2" id="text-org298a2b3">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a> aims to replace my previous <a href="https://jekyllrb.com">Jekyll</a> setup used to publish my site.
 </p>
 </div>
 </section>
 
-<section id="outline-container-org00b3927" class="outline-2">
-<h2 id="org00b3927">Implementation</h2>
-<div class="outline-text-2" id="text-org00b3927">
+<section id="outline-container-orgdf3e186" class="outline-2">
+<h2 id="orgdf3e186">Implementation</h2>
+<div class="outline-text-2" id="text-orgdf3e186">
 <p>
 For details about the implementation see <a href="posts/2019-09-03-migrating-from-jekyll-to-org/index.html">the introductory post</a> and the <a href="https://github.com/dmacvicar/site.org"><i aria-hidden='true' class='fa fa-github'></i> Source</a>.
 </p>
 </div>
 </section>
 
-<section id="outline-container-org744df02" class="outline-2">
-<h2 id="org744df02">Usage</h2>
-<div class="outline-text-2" id="text-org744df02">
+<section id="outline-container-org885264a" class="outline-2">
+<h2 id="org885264a">Usage</h2>
+<div class="outline-text-2" id="text-org885264a">
 <ul class="org-ul">
 <li>Posts go into <code>posts/</code>
 Preferably in their own subdirectory together with all their assets (self-contained)</li>
@@ -85,7 +85,7 @@ Preferably in their own subdirectory together with all their assets (self-contai
 To generate:
 </p>
 
-<pre class="example" id="orgeed96e5">
+<pre class="example" id="org75a1200">
 $ make
 </pre>
 
@@ -94,9 +94,9 @@ The output site will be rendered in <code>public/</code>.
 </p>
 </div>
 
-<div id="outline-container-org5d79519" class="outline-3">
-<h3 id="org5d79519">RSS Feeds</h3>
-<div class="outline-text-3" id="text-org5d79519">
+<div id="outline-container-orgaed107d" class="outline-3">
+<h3 id="orgaed107d">RSS Feeds</h3>
+<div class="outline-text-3" id="text-orgaed107d">
 <p>
 I am documenting this part because it is complicated and I tend to forget how it works everytime something breaks.
 </p>
@@ -153,13 +153,13 @@ The <span class="underline">RSS</span> exporter will then use the property for t
 </div>
 </section>
 
-<section id="outline-container-org9e3a336" class="outline-2">
-<h2 id="org9e3a336">Features</h2>
-<div class="outline-text-2" id="text-org9e3a336">
+<section id="outline-container-orga250afa" class="outline-2">
+<h2 id="orga250afa">Features</h2>
+<div class="outline-text-2" id="text-orga250afa">
 </div>
-<div id="outline-container-org27481d8" class="outline-4">
-<h4 id="org27481d8">Redirection</h4>
-<div class="outline-text-4" id="text-org27481d8">
+<div id="outline-container-orga8937b6" class="outline-4">
+<h4 id="orga8937b6">Redirection</h4>
+<div class="outline-text-4" id="text-orga8937b6">
 <p>
 When the site was generated using Jekyll, posts where generated in the <code>/:year/:month/:day/:id.html</code> route.
 In order to generate a redirect page, use the following keyword to generate a redirect page:
@@ -172,9 +172,9 @@ In order to generate a redirect page, use the following keyword to generate a re
 </div>
 </div>
 
-<div id="outline-container-orgfabdeeb" class="outline-3">
-<h3 id="orgfabdeeb">Drafts</h3>
-<div class="outline-text-3" id="text-orgfabdeeb">
+<div id="outline-container-orgcf65aa9" class="outline-3">
+<h3 id="orgcf65aa9">Drafts</h3>
+<div class="outline-text-3" id="text-orgcf65aa9">
 <p>
 To hide a post from the list of recent posts or the full archive, use:
 </p>
@@ -191,9 +191,9 @@ Note that the post will still be published, but you will need to access it by it
 </div>
 </section>
 
-<section id="outline-container-orge25b201" class="outline-2">
-<h2 id="orge25b201">License</h2>
-<div class="outline-text-2" id="text-orge25b201">
+<section id="outline-container-orga062dd6" class="outline-2">
+<h2 id="orga062dd6">License</h2>
+<div class="outline-text-2" id="text-orga062dd6">
 <p>
 The code used for generating the site is licensed under the <a href="LICENSE">MIT</a> license.
 </p>
@@ -207,7 +207,7 @@ The content of the site, Copyright (©) 2014-2019 Duncan Mac-Vicar P..
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 22 May. 2022. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.6). <a href="/README.html">Details</a>.</p>
+<p>Last updated 22 May. 2022. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.5.3). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
