--- a/setup.html
+++ b/setup.html
@@ -49,9 +49,9 @@
 <header>
 <h1 class="title">My personal setup</h1>
 </header>
-<section id="outline-container-orgff2469a" class="outline-2">
-<h2 id="orgff2469a">General setup</h2>
-<div class="outline-text-2" id="text-orgff2469a">
+<section id="outline-container-orgc2d6433" class="outline-2">
+<h2 id="orgc2d6433">General setup</h2>
+<div class="outline-text-2" id="text-orgc2d6433">
 <p>
 I like Thinkpads. Until July 2021, I used a 12&ldquo; <a href="https://www.lenovo.com/us/en/laptops/thinkpad/x-series/x230">Thinkpad X230</a> from 2012. Nowadays I use a <a href="https://www.lenovo.com/us/en/p/laptops/thinkpad/thinkpadx/ThinkPad-X13-(Intel)-/22TPX13X3N1">Thinkpad X13</a>.
 </p>
@@ -101,9 +101,9 @@ I also have a small Home &ldquo;Lab&rdquo;
 </div>
 </section>
 
-<section id="outline-container-orgaafdbcb" class="outline-2">
-<h2 id="orgaafdbcb">Work</h2>
-<div class="outline-text-2" id="text-orgaafdbcb">
+<section id="outline-container-org5822c80" class="outline-2">
+<h2 id="org5822c80">Work</h2>
+<div class="outline-text-2" id="text-org5822c80">
 <ul class="org-ul">
 <li><a href="http://isync.sourceforge.net">mbsync</a> to synchronize IMAP locally</li>
 <li><a href="https://marlam.de/msmtp">msmtp</a> to send email</li>
@@ -120,9 +120,9 @@ This setup is kept in an internal dotfiles repository.
 </p>
 </div>
 
-<div id="outline-container-orge3bafc8" class="outline-4">
-<h4 id="orge3bafc8">Other</h4>
-<div class="outline-text-4" id="text-orge3bafc8">
+<div id="outline-container-org9d58b8c" class="outline-4">
+<h4 id="org9d58b8c">Other</h4>
+<div class="outline-text-4" id="text-org9d58b8c">
 <ul class="org-ul">
 <li><a href="https://github.com/abraunegg/onedrive">unofficial onedrive client</a> to sync files to OneDrive</li>
 <li><a href="https://www.bose.com/products/headphones/noise_cancelling_headphones/noise-cancelling-headphones-700.html">Bose 700</a> noise cancelling headphones for a great confcall experience</li>
@@ -131,9 +131,9 @@ This setup is kept in an internal dotfiles repository.
 </div>
 </section>
 
-<section id="outline-container-orgff21ee2" class="outline-2">
-<h2 id="orgff21ee2">Development environment</h2>
-<div class="outline-text-2" id="text-orgff21ee2">
+<section id="outline-container-orga841f15" class="outline-2">
+<h2 id="orga841f15">Development environment</h2>
+<div class="outline-text-2" id="text-orga841f15">
 <ul class="org-ul">
 <li><a href="https://www.gnu.org/software/emacs">Emacs</a> as editor for most languages, with <a href="https://raw.githubusercontent.com/dmacvicar/dotfiles/master/emacs/.emacs.d/init.el">many</a> extensions. Some highlights:
 <ul class="org-ul">
@@ -146,27 +146,27 @@ This setup is kept in an internal dotfiles repository.
 </ul>
 </div>
 
-<div id="outline-container-orgb4c407a" class="outline-4">
-<h4 id="orgb4c407a">C++</h4>
-<div class="outline-text-4" id="text-orgb4c407a">
+<div id="outline-container-org2b58792" class="outline-4">
+<h4 id="org2b58792">C++</h4>
+<div class="outline-text-4" id="text-org2b58792">
 <ul class="org-ul">
 <li><a href="https://cmake.org">CMake</a> as build system and to fetch dependencies</li>
 <li><a href="https://clang.llvm.org/">clang</a> provides most of the features to lsp-mode in Emacs</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org600fcd6" class="outline-4">
-<h4 id="org600fcd6">Ruby</h4>
-<div class="outline-text-4" id="text-org600fcd6">
+<div id="outline-container-org9f872ca" class="outline-4">
+<h4 id="org9f872ca">Ruby</h4>
+<div class="outline-text-4" id="text-org9f872ca">
 <ul class="org-ul">
 <li>I use the distribution interpreter and <a href="https://bundler.io">bundler</a> to vendor dependencies inside the project</li>
 <li>I use the <a href="https://solargraph.org">Solargraph</a> gem to power lsp-mode in emacs</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orga861a78" class="outline-4">
-<h4 id="orga861a78">Golang</h4>
-<div class="outline-text-4" id="text-orga861a78">
+<div id="outline-container-orgc843355" class="outline-4">
+<h4 id="orgc843355">Golang</h4>
+<div class="outline-text-4" id="text-orgc843355">
 <ul class="org-ul">
 <li>I just use the standard Go modules</li>
 <li><a href="https://github.com/golang/tools/tree/master/gopls">gopls</a> to power lsp-mode in emacs</li>
@@ -178,7 +178,7 @@ This setup is kept in an internal dotfiles repository.
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 22 May. 2022. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.6). <a href="/README.html">Details</a>.</p>
+<p>Last updated 22 May. 2022. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.5.3). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
